src/objects/AB2__AdBookPackageComponentDrop__c.object
<CustomObject>
    <description>AdBook Package Component Drops</description>
    <fields>
        <fullName>AB2__ABAdUnit__c</fullName>
        <description>AdBook Ad Unit</description>
        <label>AB Ad Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>110x75</fullName>
                </value>
                <value>
                    <fullName>120x60</fullName>
                </value>
                <value>
                    <fullName>120x90</fullName>
                </value>
                <value>
                    <fullName>125x125</fullName>
                </value>
                <value>
                    <fullName>130x100</fullName>
                </value>
                <value>
                    <fullName>130x50</fullName>
                </value>
                <value>
                    <fullName>140x200</fullName>
                </value>
                <value>
                    <fullName>145x55</fullName>
                </value>
                <value>
                    <fullName>200x200</fullName>
                </value>
                <value>
                    <fullName>220x100</fullName>
                </value>
                <value>
                    <fullName>234x60</fullName>
                </value>
                <value>
                    <fullName>38x38</fullName>
                </value>
                <value>
                    <fullName>400x40</fullName>
                </value>
                <value>
                    <fullName>405x100</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>600x50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABBillingModel__c</fullName>
        <description>The AdBook Package Component Drop Billing Model</description>
        <inlineHelpText>The AdBook Package Component Drop Billing Model</inlineHelpText>
        <label>AB Billing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AB2__ABBillingModel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABDropCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the drop been cancelled? 
Corresponds to the AdBook Drop.ActiveStatus == &apos;Cancelled&apos;</description>
        <inlineHelpText>Has the drop been cancelled?</inlineHelpText>
        <label>AB Drop Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropGoals__c</fullName>
        <description>The Goal count for a Package Component Drop.</description>
        <inlineHelpText>The Goal count for a Package Component Drop.</inlineHelpText>
        <label>AB Drop Goals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropID__c</fullName>
        <description>AdBook Package Component Drop ID</description>
        <externalId>true</externalId>
        <label>AB DropID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__ABDropNotes__c</fullName>
        <description>AdBook Drop Notes</description>
        <label>AB Drop Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB2__ABDropPrice__c</fullName>
        <description>AdBook Drop Price from last refresh operation</description>
        <inlineHelpText>AdBook Drop Price from last refresh operation</inlineHelpText>
        <label>AB Drop Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__ABEndDate__c</fullName>
        <description>The AdBook End Date. Should mirror the EndDate of the parent OpportunityLineItem</description>
        <label>AB End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementID__c</fullName>
        <description>AdBook Media Element ID</description>
        <label>AB MediaElementID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElementPath__c</fullName>
        <description>AdBook Media Element Path</description>
        <label>AB MediaElement Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABMediaElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AB MediaElement</label>
        <referenceTo>AB2__MediaElement__c</referenceTo>
        <relationshipLabel>AdBook Package Component Drops</relationshipLabel>
        <relationshipName>AdBook_Package_Component_Drops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABParentPackageDropID__c</fullName>
        <description>The AdBook Drop ID for the parent package</description>
        <inlineHelpText>The AdBook Drop ID for the parent package</inlineHelpText>
        <label>AB Parent Package Drop ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABParentPackageID__c</fullName>
        <description>The Media Element Id of the Parent Package - long</description>
        <inlineHelpText>The Media Element Id of the Parent Package - long</inlineHelpText>
        <label>AB Parent Package Media Element ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ABParentPackageOpportunityLineItemID__c</fullName>
        <description>AdBook Parent Package Drop OpportunityLineItem ID</description>
        <inlineHelpText>The Salesforce OpportunityLineItem Id of the Package Drop (if applicable)</inlineHelpText>
        <label>AB Parent Package OpportunityLineItem ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ABPayType__c</fullName>
        <description>AdBook Payment Type</description>
        <label>AB Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PaidFor</fullName>
                </value>
                <value>
                    <fullName>ValueAdd</fullName>
                </value>
                <value>
                    <fullName>MakeGood</fullName>
                </value>
                <value>
                    <fullName>Remnant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__ABPriceTypeRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The AdBook Price Type. Determines the AB Price Calculation Type.</description>
        <inlineHelpText>The AdBook Price Type. Determines the AB Price Calculation Type.</inlineHelpText>
        <label>AB Price Type</label>
        <referenceTo>AB2__AdBookPriceType__c</referenceTo>
        <relationshipLabel>AdBook Package Component Drops</relationshipLabel>
        <relationshipName>AdBook_Package_Component_Drops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ABStartDate__c</fullName>
        <description>The AdBook Start Date. Should mirror the StartDate of the parent OpportunityLineItem</description>
        <label>AB Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__ABWorkingPrice__c</fullName>
        <description>The AdBook Working Unit/Net Price. Maps to the AdBook Drop.Price field. 
For orders with PriceType of CPM this will be the price per 1000 impressions. 
For Flat Rate, CPA/CPC and CPL orders this is the price as entered.</description>
        <inlineHelpText>The AdBook Working Unit/Net Price. Maps to the AdBook Drop.Price field. 
For orders with PriceType of CPM this will be the price per 1000 impressions. 
For Flat Rate, CPA/CPC and CPL orders this is the price as entered.</inlineHelpText>
        <label>AB Working Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB2__Impressions__c</fullName>
        <description>AdBook Impressions</description>
        <label>Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__Opportunity__c</fullName>
        <description>Parent Opportunity Record</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AdBook Package Component Drops</relationshipLabel>
        <relationshipName>AdBook_Package_Component_Drops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__PricebookEntryId__c</fullName>
        <label>PricebookEntryId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__TotalPrice__c</fullName>
        <description>Calculated Total Price for the Package Component</description>
        <inlineHelpText>Calculated Total Price for the Package Component</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>AdBook Package Component Drop</label>
    <nameField>
        <label>AdBook Package Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook Package Component Drops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>